@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>scraphead</artifactId>
@@ -7,10 +9,11 @@
         <version>1.3.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>scraphead-netty</artifactId>
+    <artifactId>scraphead-spring</artifactId>
 
     <properties>
         <surefire.argline.opens>
+            --add-opens scraphead.spring/io.netty.handler.codec.http=ALL-UNNAMED
             --add-opens java.base/sun.security.x509=ALL-UNNAMED
             --add-opens java.base/sun.security.util=ALL-UNNAMED
         </surefire.argline.opens>
@@ -23,16 +26,24 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>io.projectreactor.netty</groupId>
-            <artifactId>reactor-netty</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webflux</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.projectreactor.netty</groupId>
+            <artifactId>reactor-netty</artifactId>
         </dependency>
 
         <dependency>
@@ -76,4 +87,5 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
 </project>
